<?xml version="1.0"?>
<package format="2">
  <name>dloopdetector</name>
  <version>0.0.0</version>
  <description>
    DLoopDetector fork
  </description>

  <author>Titus Cieslewski</author>
  <maintainer email="titus@ifi.uzh.ch">Titus Cieslewski</maintainer>
  <license>See LICENSE.txt</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>dbow2</depend>
  <depend>dlib_catkin</depend>
  <depend>opencv2_catkin</depend>
</package>
